refactor: update variable declarations to use 'final' where applicable for immutability and improve readability in various tests and configurations